Add header HTML structure

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 	</head>
 	<body>
 		<header>
-			
+			<div>
+				<p class="caption front">THE LENGENDARY</p>
+				<h1 class="title">SHUYANG CHOU</h1>
+				<p class="caption line-on-side">UI DESIGNER / FRONT-END DEV</p>
+			</div>
 		</header>
 		<main>
 			
