Add portrait component with its style

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 			</div>
 		</header>
 		<main>
+			<div class="portrait">
+					<img src="./img/protrait.jpg" alt="Portrait of shuyang">
+			</div>
 			
 		</main>
 		<script src="js/myScript.js"></script>
