Add personal info HTML structure and styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Shuyang Chou | Resume</title>
 		<!-- font embeb -->
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,300i,700" rel="stylesheet">
-		<!-- font awesome icon -->
+		<!-- material icon -->
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<!-- css -->
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -23,9 +23,31 @@
 		</header>
 		<main>
 			<div class="portrait">
-					<img src="./img/protrait.jpg" alt="Portrait of shuyang">
+				<img src="./img/protrait.jpg" alt="Portrait of shuyang">
 			</div>
-			
+			<h2 class="subtitle line-on-side">PERSONAL_INFO</h2>
+			<ul class="icon-with-text">
+				<li>
+					<i class="material-icons">account_box</i>
+					周書暘 Chou, Shu-Yang
+				</li>
+				<li>
+					<i class="material-icons">cake</i>
+					29th Jan 1984
+				</li>
+				<li>
+					<i class="material-icons">phone_iphone</i>
+					+886928083366
+				</li>
+				<li>
+					<i class="material-icons">mail</i>
+					shuyang0129@gmail.com
+				</li>
+				<li>
+					<i class="material-icons">link</i>
+					<a href="http://www.dawn.design" target="_blank" rel="noopener noreferrer">www.dawn.design</a>
+				</li>
+			</ul>
 		</main>
 		<script src="js/myScript.js"></script>
 	</body>
