Add education HTML structure and style

--- a/index.html
+++ b/index.html
@@ -25,29 +25,55 @@
 			<div class="portrait">
 				<img src="./img/protrait.jpg" alt="Portrait of shuyang">
 			</div>
-			<h2 class="subtitle line-on-side">PERSONAL_INFO</h2>
-			<ul class="icon-with-text">
-				<li>
-					<i class="material-icons">account_box</i>
-					周書暘 Chou, Shu-Yang
-				</li>
-				<li>
-					<i class="material-icons">cake</i>
-					29th Jan 1984
-				</li>
-				<li>
-					<i class="material-icons">phone_iphone</i>
-					+886928083366
-				</li>
-				<li>
-					<i class="material-icons">mail</i>
-					shuyang0129@gmail.com
-				</li>
-				<li>
-					<i class="material-icons">link</i>
-					<a href="http://www.dawn.design" target="_blank" rel="noopener noreferrer">www.dawn.design</a>
-				</li>
-			</ul>
+			<section>
+				<h2 class="subtitle line-on-side">PERSONAL_INFO</h2>
+				<ul class="icon-with-text">
+					<li>
+						<i class="material-icons">account_box</i>
+						周書暘 Chou, Shu-Yang
+					</li>
+					<li>
+						<i class="material-icons">cake</i>
+						29th Jan 1984
+					</li>
+					<li>
+						<i class="material-icons">phone_iphone</i>
+						+886928083366
+					</li>
+					<li>
+						<i class="material-icons">mail</i>
+						shuyang0129@gmail.com
+					</li>
+					<li>
+						<i class="material-icons">link</i>
+						<a href="http://www.dawn.design" target="_blank" rel="noopener noreferrer">www.dawn.design</a>
+					</li>
+				</ul>
+			</section>
+			<section>
+				<h2 class="subtitle line-on-side">EDUCATION</h2>
+				<div class="education__item">
+					<div class="education__date">2011</div>
+					<div class="education__info">
+						<div class="education__info_main">
+							<h3 class="education__heading">Brunel University (MA)</h3>
+							<p class="education__duration">Sep 2011 - Sep 2012</p>
+						</div>
+						<p class="education__description">- Integrated Product Design</p>
+					</div>
+				</div>
+				<div class="education__item">
+						<div class="education__date">2007</div>
+						<div class="education__info">
+							<div class="education__info_main">
+								<h3 class="education__heading">Tamkang University (BA)</h3>
+								<p class="education__duration">Sep 2002 - June 2007</p>
+							</div>
+							<p class="education__description">- Bachelor of Science</p>
+						</div>
+					</div>
+			</section>
+			
 		</main>
 		<script src="js/myScript.js"></script>
 	</body>
