Add skill component

--- a/index.html
+++ b/index.html
@@ -73,7 +73,83 @@
 						</div>
 					</div>
 			</section>
-			
+			<section class="section__skill">
+				<h2 class="subtitle line-on-side">SKILLS</h2>
+				<div class="section__item">
+					<div class="skill__item">
+						<div class="skill__info">
+							<h3 class="skill__name">Sketch</h3>
+							<div class="skill__level_bg">
+								<div id="skill__level_sketch"></div>
+							</div>
+							<p class="skill__score">8/10</p>
+						</div>
+					</div>
+					<div class="skill__item">
+						<div class="skill__info">
+							<h3 class="skill__name">HTML</h3>
+							<div class="skill__level_bg">
+								<div id="skill__level_html"></div>
+							</div>
+							<p class="skill__score">9/10</p>
+						</div>
+					</div>
+					<div class="skill__item">
+						<div class="skill__info">
+							<h3 class="skill__name">CSS</h3>
+							<div class="skill__level_bg">
+								<div id="skill__level_css"></div>
+							</div>
+							<p class="skill__score">9/10</p>
+						</div>
+					</div>
+					<div class="skill__item">
+						<div class="skill__info">
+							<h3 class="skill__name">SASS</h3>
+							<div class="skill__level_bg">
+								<div id="skill__level_sass"></div>
+							</div>
+							<p class="skill__score">8/10</p>
+						</div>
+					</div>
+					<div class="skill__item">
+						<div class="skill__info">
+							<h3 class="skill__name">jQuery</h3>
+							<div class="skill__level_bg">
+								<div id="skill__level_jquery"></div>
+							</div>
+							<p class="skill__score">7/10</p>
+						</div>
+					</div>
+					<div class="skill__item">
+						<div class="skill__info">
+							<h3 class="skill__name">Javascript</h3>
+							<div class="skill__level_bg">
+								<div id="skill__level_javascript"></div>
+							</div>
+							<p class="skill__score">8/10</p>
+						</div>
+					</div>
+					<div class="skill__item">
+						<div class="skill__info">
+							<h3 class="skill__name">React JS</h3>
+							<div class="skill__level_bg">
+								<div id="skill__level_react-js"></div>
+							</div>
+							<p class="skill__score">7/10</p>
+						</div>
+					</div>
+					<div class="skill__item">
+						<div class="skill__info">
+							<h3 class="skill__name">Vue JS</h3>
+							<div class="skill__level_bg">
+								<div id="skill__level_vue-js"></div>
+							</div>
+							<p class="skill__score">7/10</p>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<script src="js/myScript.js"></script>
 	</body>
