Add class to education section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					</li>
 				</ul>
 			</section>
-			<section>
+			<section class="section__education">
 				<h2 class="subtitle line-on-side">EDUCATION</h2>
 				<div class="education__item">
 					<div class="education__date">2011</div>
