Ass work component

--- a/index.html
+++ b/index.html
@@ -73,6 +73,75 @@
 						</div>
 					</div>
 			</section>
+			<section class="section__work">
+					<h2 class="subtitle line-on-side">WORK EXPERIANCE</h2>
+					<div class="work__item">
+						<div class="work__info_main">
+							<h3 class="work__heading">WaitBot</h3>
+							<p class="work__duration">Feb 2018 - Present</p>
+						</div>
+						<p class="work__description">- Founder</p>
+						<p class="work__description">- Front-end web developer</p>
+						<p class="work__description">- GUI / UI / UX designer</p>
+					</div>
+					<div class="work__item">
+						<div class="work__info_main">
+							<h3 class="work__heading">洋漾 Yang Yang</h3>
+							<p class="work__duration">Dec 2017 - Present</p>
+						</div>
+						<p class="work__description">- Co-Founder</p>
+						<p class="work__description">- Product developer</p>
+						<p class="work__description">- Front-end web developer / designer</p>
+					</div>
+					<div class="work__item">
+						<div class="work__info_main">
+							<h3 class="work__heading">Foodimal</h3>
+							<p class="work__duration">Jan 2017 - Present</p>
+						</div>
+						<p class="work__description">- Founder</p>
+						<p class="work__description">- Front-end web developer / designer</p>
+						<p class="work__description">- GUI / UI / UX designer</p>
+					</div>
+					<div class="work__item">
+						<div class="work__info_main">
+							<h3 class="work__heading">森永製菓 x TRINUS 商品開發競賽</h3>
+							<p class="work__duration">Jan 2018 - Feb 2018</p>
+						</div>
+						<p class="work__description">- Participant</p>
+						<p class="work__description">- Packaging design</p>
+					</div>
+					<div class="work__item">
+						<div class="work__info_main">
+							<h3 class="work__heading">中華電信 Chungwa Telecom</h3>
+							<p class="work__duration">July 2015 - Oct 2016</p>
+						</div>
+						<p class="work__description">- " Heuristic Evaluation " Lecturer</p>
+					</div>
+					<div class="work__item">
+						<div class="work__info_main">
+							<h3 class="work__heading">源思科技 Loftech Corporation</h3>
+							<p class="work__duration">Feb 2015 - Feb 2017</p>
+						</div>
+						<p class="work__description">- GUI / UI / UX / Web design consultant</p>
+						<p class="work__description">- In-house design team training</p>
+						<p class="work__description">- New feature development advisor</p>
+					</div>
+					<div class="work__item">
+						<div class="work__info_main">
+							<h3 class="work__heading">翰尼斯企業有限公司 Cavedu</h3>
+							<p class="work__duration">June 2014 - Sep 2014</p>
+						</div>
+						<p class="work__description">- Internship</p>
+						<p class="work__description">- 3D printer assembling / research</p>
+					</div>
+					<div class="work__item">
+						<div class="work__info_main">
+							<h3 class="work__heading">圓剛科技股份有限公司 AverMedia</h3>
+							<p class="work__duration">Sep 2013 - Dec 2013</p>
+						</div>
+						<p class="work__description">- UI designer</p>
+					</div>
+				</section>
 			<section class="section__skill">
 				<h2 class="subtitle line-on-side">SKILLS</h2>
 				<div class="section__item">
